data scrapping repo + auth BE
